@@ -1,6 +1,6 @@
 
 R : Copyright 2005, The R Foundation for Statistical Computing
-Version 2.2.0 Under development (unstable) (2005-07-11 r34924)
+Version 2.2.0 Under development (unstable) (2005-07-20 r34993)
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -4815,4 +4815,10 @@ $foo
 unknown 
 coef[0] = 1
 > ## printed wrongly in R <= 2.1.1
+> 
+> DF <- data.frame(A=1:2, B=3:4)
+> try(DF[2, 1:3] <- NULL)
+Error in "[<-.data.frame"(`*tmp*`, 2, 1:3, value = NULL) : 
+	replacement has 0 items, need 3
+> ## wrong error message in R < 2.2.0
 > 
